Crash when the new layout panel is in popover #117168

Closed
opened 2024-01-16 14:30:53 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-15 19:27, hash: 0f8c8e475a11
Worked: n/a

Short description of error
When the new layout panel is used in a panel that will be shown as popover, Blender crashes as soon as the popover is open.

Discovered while considering the new panel as one of possible options for this PR.

Exact steps for others to reproduce the error

  • On the code for VIEW3D_PT_tools_object_options_transform (a panel visible in the UI through the Sidebar or the 'Options' popover), add the following:
        if panel := layout.panel("my_panel_id", text="Hello World", default_closed=False):
            panel.label(text="Success")
  • Run the script
  • Expand the 'Options' popover
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-15 19:27, hash: `0f8c8e475a11` Worked: n/a **Short description of error** When [the new layout panel](https://developer.blender.org/docs/release_notes/4.1/python_api/#layout-panels) is used in a panel that will be shown as popover, Blender crashes as soon as the popover is open. <video src="/attachments/76b3cea2-0de8-4392-8199-d8a10560aa13" title="crash_layout_panel_in_popover.mp4" controls></video> Discovered while considering the new panel as one of possible options for [this PR](https://projects.blender.org/blender/blender/pulls/112915#issuecomment-1102833). **Exact steps for others to reproduce the error** - On the code for `VIEW3D_PT_tools_object_options_transform` (a panel visible in the UI through the Sidebar or the 'Options' popover), add the following: ```python if panel := layout.panel("my_panel_id", text="Hello World", default_closed=False): panel.label(text="Success") ``` - Run the script - Expand the 'Options' popover
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-16 14:30:54 +01:00
Iliya Katushenock added the
Interest
Python API
Interest
User Interface
labels 2024-01-16 14:32:09 +01:00

I can confirm.
bpy.types.UILayout.panel was implemented in 8896446f7e
Cc @JacquesLucke

I can confirm. [bpy.types.UILayout.panel](https://docs.blender.org/api/dev/bpy.types.UILayout.html#bpy.types.UILayout.panel) was implemented in 8896446f7e Cc @JacquesLucke
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-16 18:33:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117168
No description provided.